[package]
name = "aroon-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description="Aroon and Aroon Oscillator Implementation In Rust"
repository="https://github.com/immortalinfidel/aroon-rs"
homepage="https://github.com/immortalinfidel/aroon-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { version = "0.1.0" }
